# http-signatures

./: Cargo.toml  README.md
http-sig-validator/: Cargo.toml
http-sig-validator/src/: main.rs
src/: actix.rs  actix_web_impls.rs  algorithm.rs  canonicalize.rs  derived.rs  header.rs  lib.rs  mock_request.rs  reqwest_impls.rs  rouille_impls.rs  signature_component.rs  signing.rs  time_provider.rs  verifying.rs
src/algorithm/: openssl.rs  ring.rs
test_data/: basic_request.txt  ec-p256-private-pk8.der  ec-p256-private-secg.der  ec-p256-public-spki.der  ecc_private_no.pem  ecc_private_pk8.der  ecc_private_pk8.pem  public_from_pem.pem  rsa-2048-private-pk1.der  rsa-2048-private-pk1.pem  rsa-2048-private-pk8.der  rsa-2048-public-pk1.der  rsa-2048-public-pk8.der  rsa-2048-public-pk8.pem  rsa-v1_5-2048-private-pk8.der  rsa-v1_5-2048-public-pk1.der  rsa-v1_5-2048-public-pk1.pem  rsa-v1_5-2048-public-pk8.der  signed_request.txt  test.der  test.pem  test_key_rsa_private.pem
