[package]
name = "http-sig"
description = "Implementation of the IETF draft 'Signing HTTP Messages'"
version = "0.4.0"
authors = ["Jack Cargill <jack@passfort.com>", "Diggory Blake"]
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/crate/http-sig"
repository = "https://github.com/PassFort/http-signatures"
homepage = "https://github.com/PassFort/http-signatures"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["http-sig-validator"]

[dependencies]
anyhow = "1.0.28"
base64 = "0.12.0"
chrono = "0.4.11"
hmac = "0.7.1"
http = "0.2.5"
itertools = "0.9.0"
log = "0.4.8"
openssl = { version = "0.10.38", optional = true }
pem = "1.0.2"
reqwest = {version = "0.11", features = ["blocking"], optional = true}
ring = { version = "0.16.12", features = ["std"], optional = true }
rouille = {version = "3.0.0", optional = true}
sha2 = "0.8.1"
spki = { version = "0.5.4", features = ["alloc", "pem", "std"] }
subtle = "2.2.2"
thiserror = "1.0.15"
url = "2.1.1"

[features]
default = ["ring"]
